<resources>
    <string name="app_name">MiniGameCaro</string>

    <!-- Strings related to main -->
    <string name="main_title">Caro</string>
    <string name="newgame">New Game</string>
    <string name="raking">Raking</string>
    <string name="option">Option</string>
    <string name="info">Info</string>
    <string name="exit">Exit</string>

    <!-- Strings related to option -->
    <string name="newgame_title">New game</string>

    <!-- Strings related to option -->
    <string name="option_title">Options</string>
    <string name="music">Music</string>
    <string name="level">Level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="save">Save</string>

    <!-- Strings related to info -->
    <string name="info_title">How to play</string>

    <string name="white_win">WhiteWin</string>
    <string name="black_win">BlackWin</string>
    <string name="restart">Restart</string>

    <string name="title_activity_nick_name">NickNameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
